# Game-Management

./: .env  .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  db.sqlite3  manage.py  package.json  pyproject.toml  settings.py
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 01_task.yaml  config.yml  task.yaml
.github/workflows/: changelog-generator.yml  conventional_commits_changelog.yml  conventional_commits_check.yml  django_tests.yml  djhtml.yml  prettier.yml  release.yml  ruff.yml
Accounts/: forms.py  tests.py  urls.py  views.py
GameLibrary/: admin.py  apps.py  models.py  urls.py  views.py
GameLibrary/migrations/: 0001_initial.py
GameManagement/: asgi.py  settings.py  test.py  urls.py  wsgi.py
KeepGaming/: asgi.py  settings.py  urls.py  wsgi.py
static/: login.css  style.css  user-registration.css
templates/: base.html  home.html
templates/games/: game_detail.html  game_list.html
templates/registration/: logged_out.html  login.html  logout.html  signup.html
