[tool.poetry]
name = "gamemanagement"
version = "0.1.0"
description = ""
authors = ["Aniol0012 <aniol0012@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"
pillow = "^10.2.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.3"
prettier = "^0.0.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
