[tool.poetry]
name = "gamemanagement"
version = "0.1.0"
description = ""
authors = ["Aniol0012 <aniol0012@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"
psycopg2-binary = "^2.9.9"
pillow = "^10.2.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.3"
djhtml = "^3.0.6"

[tool.ruff]
lint.ignore = ["F401"]
lint.exclude = ["*/migrations/*"]

[tool.ruff.format]
quote-style = "single"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
